--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+91 630 434 5807</div>
+            <a href="tel:+916304345807" div class="phone"><i class="fa fa-phone"></i> +91 630 434 5807</a></div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <!-- <li><a href="about1.html">About Us</a></li> -->
                     <li><a href="room.html">Rooms</a></li>
                     <li><a href="amenities.html">Amenities</a></li>
                     <li><a href="booking.html">Booking</a></li>
@@ -273,7 +273,7 @@
                             <div class="col-md-3">
                                 <div class="room-rate">
                                     <h3>From</h3>
-                                    <h1>₹150</h1>
+                                    <h1>₹1500</h1>
                                     <a href="#">Book Now</a>
                                 </div>
                             </div>
@@ -321,7 +321,7 @@
                             <div class="col-md-3">
                                 <div class="room-rate">
                                     <h3>From</h3>
-                                    <h1>₹200</h1>
+                                    <h1>₹2000</h1>
                                     <a href="#">Book Now</a>
                                 </div>
                             </div>
@@ -571,7 +571,7 @@
                                 <div class="form-row">
                                     <div class="control-group col-sm-6">
                                         <label>Mobile</label>
-                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +1 234 567 8900" required="required" data-validation-required-message="Please enter your mobile number" />
+                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +916304345807" required="required" data-validation-required-message="Please enter your mobile number" />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="control-group col-sm-6">
