--- a/booking.html
+++ b/booking.html
@@ -30,16 +30,16 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+1 234 567 8900</div>
+            <div class="phone"><i class="fa fa-phone"></i>+916304345807</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <!-- <li><a href="about1.html">About Us</a></li> -->
                     <li><a href="room.html">Rooms</a></li>
                     <li><a href="amenities.html">Amenities</a></li>
                     <li class="active"><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <!-- <li><a href="login.html">Login</a></li> -->
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -145,7 +145,7 @@
                                 <div class="form-row">
                                     <div class="control-group col-md-6">
                                         <label>Mobile</label>
-                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +1 234 567 8900" required="required" data-validation-required-message="Please enter your mobile number" />
+                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +916304345807" required="required" data-validation-required-message="Please enter your mobile number" />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="control-group col-md-6">
