--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,16 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+1 234 567 8900</div>
+            <div class="phone"><i class="fa fa-phone"></i>+916304345807</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <!-- <li><a href="about1.html">About Us</a></li> -->
                     <li><a href="room.html">Rooms</a></li>
                     <li><a href="amenities.html">Amenities</a></li>
                     <li><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
+                    <!-- <li><a href="login.html">Login</a></li> -->
                     <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -70,7 +70,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="info-item">
-                                    <p><i class="fa fa-phone"></i><a href="tel:+1 234 567 8900">+1 234 567 8900</a></p>
+                                    <p><i class="fa fa-phone"></i><a href="tel:+916304345807">+916304345807</a></p>
                                 </div>
                             </div>
                         </div>
