--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta content="" name="description">
 
         <!-- Favicons -->
-        <link href="img/favicon.ico" rel="icon">
-        <link href="img/apple-favicon.png" rel="apple-touch-icon">
+        <link href="img/rimdesignlogo.png" rel="icon">
+        <!-- <link href="img/rimdesignlogo.png" rel="apple-touch-icon"> -->
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet"> 
@@ -30,8 +30,8 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <a href="tel:+916304345807" div class="phone"><i class="fa fa-phone"></i> +91 630 434 5807</a></div>
+            <a href="index.html" class="logo"><img src="img/rimdesignlogo.png" alt="logo"></a>
+            <a href="tel:+916303414096" div class="phone"><i class="fa fa-phone"></i> +91 630 341 4096</a></div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
@@ -56,23 +56,23 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/slider/header-slider-1.jpg" alt="Royal Hotel">
+                    <img src="img/slider/slider1.jpg" alt="sammakkajathara">
                     <div class="carousel-caption">
                         <h1 class="animated fadeInRight">Rooms Available In Medaram</h1>
                     </div>
                 </div>
                 
                 <div class="carousel-item">
-                    <img src="img/slider/header-slider-2.jpg" alt="Royal Hotel">
+                    <img src="img/slider/slider2.jpeg" alt="sammakkajathara">
                     <div class="carousel-caption">
-                        <h1 class="animated fadeInLeft">Stay Available In Medaram</h1>
+                        <h1 class="animated fadeInLeft">200 meters to temple</h1>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img src="img/slider/header-slider-3.jpg" alt="Royal Hotel">
+                    <img src="img/slider/slider3.jpg" alt="sammakkajathara">
                     <div class="carousel-caption">
-                        <h1 class="animated fadeInRight">Book a Stay at Medaram</h1>
+                        <h1 class="animated fadeInRight">Mini function hall available</h1>
                     </div>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="control-group col-md-3">
-                        <button class="btn btn-block">Search</button>
+                        <button class="btn btn-block">ENQUIRE</button>
                     </div>
                 </div>
             </div>
@@ -571,7 +571,7 @@
                                 <div class="form-row">
                                     <div class="control-group col-sm-6">
                                         <label>Mobile</label>
-                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +916304345807" required="required" data-validation-required-message="Please enter your mobile number" />
+                                        <input type="text" class="form-control" id="mobile" placeholder=" +91 9876543210" required="required" data-validation-required-message="Please enter your mobile number" />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="control-group col-sm-6">
@@ -617,7 +617,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="tel:+916304345807">+91 630 4345807</a>
+                        <a href="tel:+916303414096">+91 630 341 4096</a>
                     </div>
                 </div>
             </div>
