--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ROYAL HOTEL | Responsive Travel & Tourism Template</title>
+        <title>Medaram Rooms | Rooms Booking in Medaram</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -30,7 +30,7 @@
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
-            <div class="phone"><i class="fa fa-phone"></i>+916304345807</div>
+            <div class="phone"><i class="fa fa-phone"></i>+916303414096</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
