--- a/amenities.html
+++ b/amenities.html
@@ -8,8 +8,8 @@
         <meta content="" name="description">
 
         <!-- Favicons -->
-        <link href="img/favicon.ico" rel="icon">
-        <link href="img/apple-favicon.png" rel="apple-touch-icon">
+        <link href="img/rimdesignlogo.png" rel="icon">
+        <!-- <link href="img/apple-favicon.png" rel="apple-touch-icon"> -->
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet"> 
@@ -29,7 +29,7 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/logo.jpg" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/rimdesignlogo.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+916303414096</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <p>Copyright &#169; 2045 <a href="">Your Site Name</a> All Rights Reserved.</p>
+                        <p>Copyright &#169; 2022 <a href="">Your Site Name</a> All Rights Reserved.</p>
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://monosage.com//credit-removal". Thank you for your support. ***/-->
 						<p>Designed By <a href="https://monosage.com/">Monosage Private Limited</a></p>
