--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <div class="col-md-3">
                             <div class="room-img">
                                 <div class="box12">
-                                    <img src="img/room/room-1.jpg">
+                                    <img src="img/room/4.jpeg">
                                     <div class="box-content">
                                         <h3 class="title">Standard Room</h3>
                                         <ul class="icon">
@@ -294,7 +294,7 @@
                         <div class="col-md-3">
                             <div class="room-img">
                                 <div class="box12">
-                                    <img src="img/room/room-2.jpg">
+                                    <img src="img/room/3.jpeg">
                                     <div class="box-content">
                                         <h3 class="title">Double Room</h3>
                                         <ul class="icon">
@@ -344,7 +344,7 @@
                             <div class="col-md-3">
                                 <div class="room-img">
                                     <div class="box12">
-                                        <img src="img/room/room-3.jpg">
+                                        <img src="img/room/5.jpeg">
                                         <div class="box-content">
                                             <h3 class="title">Mini Function Hall</h3>
                                             <ul class="icon">
@@ -644,8 +644,7 @@
             <div class="section-header">
                 <h2>Click Below to Call Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis,
-                    enim at venenatis tincidunt.
+                    Click Here to Have a Call with us and Confirm Your Stay.!
                 </p>
             </div>
             <div class="row">
