--- a/room.html
+++ b/room.html
@@ -134,7 +134,7 @@
                         <div class="col-md-3">
                             <div class="room-img">
                                 <div class="box12">
-                                    <img src="img/room/room-1.jpg">
+                                    <img src="img/room/4.jpeg">
                                     <div class="box-content">
                                         <h3 class="title">Standard Room</h3>
                                         <ul class="icon">
@@ -184,7 +184,7 @@
                         <div class="col-md-3">
                             <div class="room-img">
                                 <div class="box12">
-                                    <img src="img/room/room-2.jpg">
+                                    <img src="img/room/3.jpeg">
                                     <div class="box-content">
                                         <h3 class="title">Double Room</h3>
                                         <ul class="icon">
@@ -235,7 +235,7 @@
                         <div class="col-md-3">
                             <div class="room-img">
                                 <div class="box12">
-                                    <img src="img/room/room-3.jpg">
+                                    <img src="img/room/5.jpeg">
                                     <div class="box-content">
                                         <h3 class="title">Mini Function Hall</h3>
                                         <ul class="icon">
