--- a/index.html
+++ b/index.html
@@ -632,9 +632,8 @@
     <!-- Booking Section End -->
 
     <!-- maps section -->
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d508.9044831941314!2d80.24455645024904!3d18.317998711596125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ff601061f419c17!2zMTjCsDE5JzA2LjMiTiA4MMKwMTQnMzguOSJF!5e0!3m2!1sen!2sin!4v1643262012886!5m2!1sen!2sin"
-        width="100%" height="400" style="border:5px;;" allowfullscreen="" loading="lazy"></iframe>
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.828437017762!2d79.2877645146908!3d18.671693187321168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcd2f0b586f6137%3A0xdcc0520e7a020fee!2sSRI%20SAI%20SAMMAKKA%20SARAKKA%20NILAYAM!5e0!3m2!1sen!2sin!4v1643300778878!5m2!1sen!2sin" width="100%" height="400" style="border:10;" allowfullscreen="" loading="lazy"></iframe></div>
     <!-- maps section End -->
 
 
